--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/loog.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>CN Sports | Camisas de time</title>
   </head>
-  <body>
+  <body class="corpo">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
